--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,14 @@
 .hiddenRow {
     padding: 0 !important;
 }
+
+thead th {
+    background-color: rgb(9, 52, 90);
+    color: white;
+}
+
+
+
+.tamnija-bg {
+    background-color: rgb(211, 211, 211);
+}
