--- a/css/main.css
+++ b/css/main.css
@@ -15,4 +15,22 @@ thead th {
 
 .tamnija-bg {
     background-color: rgb(211, 211, 211);
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    border-style: solid;
+    border-color: rgb(9, 52, 90);
+    border-left-width: 6px;
+    border-right-width: 6px;
+    border-bottom-width: 6px;
+}
+
+
+.aktivniRed {
+    background-color: rgb(9, 52, 90);
+    border-left-width: 6px;
+    border-right-width: 6px;
+    border-style: solid;
+    border-color: rgb(9, 52, 90);
+    color: white;
 }
